--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "hexy": "^0.3.5",
         "nunjucks": "^3.2.4",
         "safe-buffer": "^5.2.1",
-        "trackhar": "^0.3.0"
+        "trackhar": "file:.yalc/trackhar"
     },
     "devDependencies": {
         "@baltpeter/eslint-config": "2.2.0",
