--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@myriaddreamin/typst.ts": "^0.4.1",
         "hexy": "^0.3.5",
         "nunjucks": "^3.2.4",
+        "papaparse": "^5.4.1",
         "safe-buffer": "^5.2.1",
         "trackhar": "file:.yalc/trackhar"
     },
@@ -56,6 +57,7 @@
         "@types/har-format": "^1.2.15",
         "@types/node": "^20.10.4",
         "@types/nunjucks": "^3.2.6",
+        "@types/papaparse": "^5.3.14",
         "@typescript-eslint/eslint-plugin": "5.60.1",
         "eslint": "8.43.0",
         "eslint-plugin-eslint-comments": "3.2.0",
