--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@types/nunjucks": "^3.2.6",
         "@types/papaparse": "^5.3.14",
         "@typescript-eslint/eslint-plugin": "5.60.1",
+        "cyanoacrylate": "file:.yalc/cyanoacrylate",
         "eslint": "8.43.0",
         "eslint-plugin-eslint-comments": "3.2.0",
         "eslint-plugin-import": "2.27.5",
