--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "scripts": {
         "build": "parcel build",
         "fix": "yarn eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx --fix",
-        "postinstall": "patch-package",
         "lint": "tsc && eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx && git diff --check",
         "prepack": "rm -rf dist && yarn build && yarn typedoc",
         "test": "echo 'TODO: No tests specified yet.'",
@@ -42,8 +41,8 @@
     "dependencies": {
         "@myriaddreamin/typst-ts-web-compiler": "^0.4.1",
         "@myriaddreamin/typst.ts": "^0.4.1",
+        "@tweasel/nunjucks": "^3.2.4-tweasel1",
         "hexy": "^0.3.5",
-        "nunjucks": "^3.2.4",
         "papaparse": "^5.4.1",
         "safe-buffer": "^5.2.1",
         "trackhar": "file:.yalc/trackhar"
@@ -56,7 +55,6 @@
         "@parcel/transformer-typescript-types": "2.12.0",
         "@types/har-format": "^1.2.15",
         "@types/node": "^20.10.4",
-        "@types/nunjucks": "^3.2.6",
         "@types/papaparse": "^5.3.14",
         "@typescript-eslint/eslint-plugin": "5.60.1",
         "eslint": "8.43.0",
@@ -65,8 +63,6 @@
         "husky": "4.3.7",
         "lint-staged": "13.2.3",
         "parcel": "2.12.0",
-        "patch-package": "^8.0.0",
-        "postinstall-postinstall": "^2.1.0",
         "prettier": "2.8.8",
         "typedoc": "0.24.8",
         "typedoc-plugin-markdown": "3.15.3",
