Remove yalc and update TrackHAR

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ tmp.*
 
 dist/
 
+.yalc/
+yalc.lock
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,visualstudiocode,jetbrains+all,sublimetext,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,visualstudiocode,jetbrains+all,sublimetext,node
 
