Add script to test out templates

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ dist/
 .yalc/
 yalc.lock
 
+test/results/
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,visualstudiocode,jetbrains+all,sublimetext,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,visualstudiocode,jetbrains+all,sublimetext,node
 
