--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "fix": "yarn eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx --fix",
         "lint": "tsc && eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx && git diff --check",
         "prepack": "rm -rf dist && yarn build && yarn typedoc",
-        "test": "echo 'TODO: No tests specified yet.'",
+        "test": "tsx test/test-generate.ts",
         "watch": "parcel watch"
     },
     "husky": {
