--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
         "husky": "4.3.7",
         "lint-staged": "15.2.7",
         "parcel": "2.12.0",
+        "pkg-pr-new": "^0.0.40",
         "prettier": "2.8.8",
+        "tsx": "^4.19.3",
         "typedoc": "0.24.8",
         "typedoc-plugin-markdown": "3.15.3",
         "typescript": "5.1.6"
